--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,51 @@
 name: CI
-on: push
+on: [push, pull_request]
+
+env:
+  NODE_VERSION: "18.x"
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v3
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{env.NODE_VERSION}}
     - run: npm install
-    - run: npm test
+    - name: test
+      run: npm run test
+  lint:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop' && github.actor != 'dependabot[bot]'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{env.NODE_VERSION}}
+      - run: npm install
+      - name: lint
+        run: npm run lint
+      - name: create variable
+        id: act-A
+        run: echo "act=Hello" >> $GITHUB_OUTPUT
+      - name: use variable
+        run: echo "variables is ${{steps.act-A.outputs.act}}"
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop' && github.actor != 'dependabot[bot]' && success()
+    needs: [lint, test]
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
+          aws-region: ap-northeast-1
+#      - name: Upload files to AWS S3
+#        run: aws s3  sync ./index.js s3://my-s3-test-website-bucket
